k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox-twenty-middleware
  labels:
    app: netbox-twenty-middleware
