k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox-twenty-middleware-svc
  namespace: netbox-twenty-middleware
  labels:
    app: netbox-twenty-middleware
  # annotations: 
  # metallb.universe.tf/loadBalancerIPs: 192.168.254.17
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: netbox-twenty-middleware
